Updating attribute event handler should replace the existing attribute event listener

We should not remove the old existing attribute event listener and then appending the new listener.
Instead actually we should replace the existing attribute event listener with new one.

Bug: 759449
Change-Id: I4bdbd8935dc47dc2fc9f735dee92b1310868312d